@@ -3,14 +3,17 @@
  * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.nparser.builder;
 
+import java.util.*;
+import java.util.stream.Collectors;
+
 import de.uka.ilkd.key.nparser.KeYParserBaseVisitor;
 import de.uka.ilkd.key.util.parsing.BuildingException;
 import de.uka.ilkd.key.util.parsing.BuildingIssue;
+
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.RuleContext;
+import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
-
-import java.util.*;
 
 /**
  * This class brings some nice features to the visitors of key's ast.
@@ -25,23 +28,24 @@ import java.util.*;
  * @author Alexander Weigl
  */
 @SuppressWarnings("unchecked")
-abstract class AbstractBuilder<T extends @Nullable Object> extends KeYParserBaseVisitor<T> {
-    private final List<BuildingIssue> buildingIssues = new ArrayList<>(1);
-    private Stack<Object> parameters = new Stack<>();
+abstract class AbstractBuilder<T> extends KeYParserBaseVisitor<T> {
+
+    private @Nullable List<BuildingIssue> buildingIssues = null;
+    private @Nullable Stack<Object> parameters = null;
 
     /**
      * Helper function for avoiding cast.
      *
      * @param ctx
-     * @param <R>
+     * @param <T>
      * @return
      */
-    public <R extends T> R accept(@Nullable RuleContext ctx) {
+    public <T> @Nullable T accept(@Nullable RuleContext ctx) {
         if (ctx == null) {
             return null;
         }
         try {
-            return (R) ctx.accept(this);
+            return (T) ctx.accept(this);
         } catch (Exception e) {
             if (!(e instanceof BuildingException) && ctx instanceof ParserRuleContext) {
                 throw new BuildingException((ParserRuleContext) ctx, e);
@@ -60,34 +64,43 @@ abstract class AbstractBuilder<T extends @Nullable Object> extends KeYParserBase
     }
 
     /**
-     * @param <R>
+     * @param <T>
      * @return
      */
-    protected <R extends @Nullable Object> R peek() {
-        return (R) (parameters.isEmpty() ? null : parameters.peek());
+    protected <T> @Nullable T peek() {
+        return (T) (parameters.isEmpty() ? null : parameters.peek());
     }
 
-    protected <R extends T> R acceptFirst(Collection<? extends RuleContext> seq) {
+    protected <T> T acceptFirst(Collection<? extends RuleContext> seq) {
         if (seq.isEmpty()) {
             return null;
         }
         return accept(seq.iterator().next());
     }
 
-    protected <R> R pop() {
-        return (R) parameters.pop();
+    protected <T> T pop() {
+        if (parameters == null) {
+            throw new IllegalStateException("Stack is empty");
+        }
+        return (T) parameters.pop();
     }
 
     protected void push(Object... obj) {
+        if (parameters == null) {
+            parameters = new Stack<>();
+        }
         for (Object a : obj) {
             parameters.push(a);
         }
     }
 
-    protected <R extends T> R accept(@Nullable RuleContext ctx, Object... args) {
+    protected <T> @Nullable T accept(@Nullable RuleContext ctx, Object... args) {
+        if (parameters == null) {
+            parameters = new Stack<>();
+        }
         int stackSize = parameters.size();
         push(args);
-        R t = accept(ctx);
+        T t = accept(ctx);
         // Stack hygiene
         while (parameters.size() > stackSize) {
             parameters.pop();
@@ -95,19 +108,17 @@ abstract class AbstractBuilder<T extends @Nullable Object> extends KeYParserBase
         return t;
     }
 
-    protected <R extends T> R oneOf(@Nullable ParserRuleContext... ctxs) {
+    protected <T> T oneOf(ParserRuleContext... ctxs) {
         for (ParserRuleContext ctx : ctxs) {
             if (ctx != null) {
-                return (R) ctx.accept(this);
+                return (T) ctx.accept(this);
             }
         }
         return null;
     }
 
-    protected <R extends T> List<R> mapOf(Collection<? extends ParserRuleContext> argument) {
-        return argument.stream()
-                .map(it -> (R) it.accept(this))
-                .toList();
+    protected <T> List<T> mapOf(Collection<? extends ParserRuleContext> argument) {
+        return argument.stream().map(it -> (T) it.accept(this)).collect(Collectors.toList());
     }
 
     protected void each(RuleContext... ctx) {
@@ -123,12 +134,15 @@ abstract class AbstractBuilder<T extends @Nullable Object> extends KeYParserBase
     }
     // endregion
 
-    protected <T2 extends T> List<T2> mapMapOf(List<? extends RuleContext>... ctxss) {
+    protected <T2> List<T2> mapMapOf(List<? extends RuleContext>... ctxss) {
         return Arrays.stream(ctxss).flatMap(it -> it.stream().map(a -> (T2) accept(a)))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<BuildingIssue> getBuildingIssues() {
+    public @NonNull List<BuildingIssue> getBuildingIssues() {
+        if (buildingIssues == null) {
+            buildingIssues = new LinkedList<>();
+        }
         return buildingIssues;
     }
 
